--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo-sena-verde.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Coffco</title>
+    <title>Coffc</title>
   </head>
   <body>
     <div id="root"></div>
